Project

General

Profile

Actions

Bug #21243

closed

incorrect erasure-code space in command ceph df

Added by Petr Malkov over 6 years ago. Updated over 6 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Category:
Correctness/Safety
Target version:
% Done:

0%

Source:
Tags:
Backport:
luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Monitor
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

ceph osd erasure-code-profile set ISA plugin=isa k=2 m=2 crush-failure-domain=host crush-device-class=hdd

ceph osd dump | grep pool
'default.rgw.buckets.data' replicated size 3 min_size 2
'default.rgw.ISA.buckets.data' erasure size 4 min_size 3
ceph df
default.rgw.buckets.data 6 27226M 0.06 42177G 7066
default.rgw.ISA.buckets.data 7 34299M 0.08 42177G 8579

Incorrect ISA erasure-coded pool space. It should be less, but shows the same.
I also tried ISA plugin=isa k=2 m=1, still the same bug


Related issues 2 (0 open2 closed)

Related to CephFS - Bug #21381: test_filtered_df: assert 0.9 < ratio < 1.1ResolvedDouglas Fuller09/13/2017

Actions
Copied to RADOS - Backport #21374: luminous: incorrect erasure-code space in command ceph dfResolvedAbhishek LekshmananActions
Actions #1

Updated by Chang Liu over 6 years ago

  • Status changed from New to 12
➜  build git:(wip-mgr-df) ✗ ./bin/ceph df
*** DEVELOPER MODE: setting PATH, PYTHONPATH and LD_LIBRARY_PATH ***
2017-09-05 20:59:12.105473 7f19730b4700 -1 WARNING: all dangerous and experimental features are enabled.
2017-09-05 20:59:12.112568 7f19730b4700 -1 WARNING: all dangerous and experimental features are enabled.
DEBUG(targets): 
('mon', '')
GLOBAL:
    SIZE     AVAIL     RAW USED     %RAW USED 
    413G      115G         298G         72.22 
POOLS:
    NAME                  ID     USED      %USED     MAX AVAIL     OBJECTS 
    cephfs_data_a         1          0         0          111G           0 
    cephfs_metadata_a     2      2.19K         0          111G          21 
    isa-ec-pool           3          0         0          111G           0 

it could be reproduced in master branch.

Actions #2

Updated by Chang Liu over 6 years ago

not only ISA plugin, It's common problem.

➜  build git:(wip-mgr-df) ✗ ceph osd erasure-code-profile set myprofile \
>    k=3 \
>    m=2 \
>    crush-failure-domain=osd
2017-09-05 21:01:09.564624 7f415a614700 -1 WARNING: all dangerous and experimental features are enabled.
2017-09-05 21:01:09.589226 7f415a614700 -1 WARNING: all dangerous and experimental features are enabled.
➜  build git:(wip-mgr-df) ✗ ceph osd pool create default2-ec-pool 12 12 erasure myprofile
2017-09-05 21:01:19.972730 7fe416634700 -1 WARNING: all dangerous and experimental features are enabled.
2017-09-05 21:01:20.005141 7fe416634700 -1 WARNING: all dangerous and experimental features are enabled.
pool 'default2-ec-pool' created
➜  build git:(wip-mgr-df) ✗ ./bin/ceph df                                                
*** DEVELOPER MODE: setting PATH, PYTHONPATH and LD_LIBRARY_PATH ***
2017-09-05 21:01:23.993915 7ffbe9313700 -1 WARNING: all dangerous and experimental features are enabled.
2017-09-05 21:01:24.001296 7ffbe9313700 -1 WARNING: all dangerous and experimental features are enabled.

GLOBAL:
    SIZE     AVAIL     RAW USED     %RAW USED 
    413G      115G         298G         72.23 
POOLS:
    NAME                  ID     USED      %USED     MAX AVAIL     OBJECTS 
    cephfs_data_a         1          0         0          111G           0 
    cephfs_metadata_a     2      2.19K         0          111G          21 
    isa-ec-pool           3          0         0          111G           0 
    default-ec-pool       4          0         0          111G           0 
    default2-ec-pool      5          0         0          111G           0 

Actions #3

Updated by Chang Liu over 6 years ago

  • Assignee set to Chang Liu
Actions #5

Updated by Chang Liu over 6 years ago

  • Tracker changed from Bug to Backport
  • Status changed from 12 to Resolved
  • Assignee deleted (Chang Liu)
  • Target version changed from v12.2.0 to v12.2.1
Actions #6

Updated by Kefu Chai over 6 years ago

  • Tracker changed from Backport to Bug
  • Project changed from Ceph to RADOS
  • Category set to Correctness/Safety
  • Status changed from Resolved to Pending Backport
  • % Done set to 0
  • Backport set to luminous
  • Regression set to No
  • Severity set to 3 - minor
  • Component(RADOS) Monitor added
Actions #7

Updated by Nathan Cutler over 6 years ago

  • Copied to Backport #21374: luminous: incorrect erasure-code space in command ceph df added
Actions #8

Updated by Ken Dreyer over 6 years ago

  • Related to Bug #21381: test_filtered_df: assert 0.9 < ratio < 1.1 added
Actions #9

Updated by Nathan Cutler over 6 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF