mon: incorrect MAX AVAIL in "ceph df"

Fixes: http://tracker.ceph.com/issues/21243

Signed-off-by: liuchang0812 <liuchang0812@gmail.com>