src/mon/PGMap.cc
@@ -835,7 +835,7 @@ void PGMapDigest::dump_object_stat_sum(
     f->dump_int("kb_used", SHIFT_ROUND_UP(sum.num_bytes, 10));
     f->dump_int("bytes_used", sum.num_bytes);
     f->dump_format_unquoted("percent_used", "%.2f", (used*100));
-    f->dump_unsigned("max_avail", avail);
+    f->dump_unsigned("max_avail", avail / raw_used_rate);
     f->dump_int("objects", sum.num_objects);
     if (verbose) {
       f->dump_int("quota_objects", pool->quota_max_objects);
@@ -850,7 +850,7 @@ void PGMapDigest::dump_object_stat_sum(
   } else {
     tbl << stringify(si_t(sum.num_bytes));
     tbl << percentify(used*100);
-    tbl << si_t(avail);
+    tbl << si_t(avail / raw_used_rate);
     tbl << sum.num_objects;
     if (verbose) {
       tbl << stringify(si_t(sum.num_objects_dirty))
